--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "file-loader": "^5.0.2",
     "gulp": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2"
