--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node proxy-blake/index.js",
     "server:dev": "nodemon proxy-blake/index.js",
-    "client:dev": "webpack -d --watch"
+    "client:dev": "webpack -d --watch",
+    "dev": "concurrently \"nodemon\" \"webpack -d --watch\""
   },
   "repository": {
     "type": "git",
@@ -38,8 +39,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.7.5",
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
-    "node-sass": "^4.13.0"
+    "mongoose": "^5.8.1",
+    "morgan": "^1.9.1",
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "require-directory": "^2.1.1"
   }
 }
