--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
-  app:
-    container_name: docker-node-mongo
+  proxy:
+    container_name: proxy-blake
     restart: always
-    build: .
+    build: proxy-blake
     ports:
       - '80:3000'
     links:
